feat: Update GeoJsonFileSource to produce Record elements and add JavaGeoJsonFileSource mapping