@@ -1,10 +1,12 @@
 package org.apache.wayang.java.operators;
 
-import com.google.gson.JsonArray;
-import com.google.gson.JsonElement;
-import com.google.gson.JsonParser;
-import org.apache.wayang.basic.operators.GeoJsonFileSource;
+import com.fasterxml.jackson.core.JsonToken;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ObjectNode;
+import org.apache.wayang.basic.data.Record;
 import org.apache.wayang.basic.data.WGeometry;
+import org.apache.wayang.basic.operators.GeoJsonFileSource;
 import org.apache.wayang.core.api.exception.WayangException;
 import org.apache.wayang.core.optimizer.OptimizationContext;
 import org.apache.wayang.core.plan.wayangplan.ExecutionOperator;
@@ -17,18 +19,15 @@ import org.apache.wayang.java.execution.JavaExecutor;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
+import java.nio.file.Paths;
+import java.util.*;
 import java.util.stream.Stream;
-import java.util.stream.StreamSupport;
 
 /**
- * Java execution operator that parses a GeoJSON document and emits each feature as a {@link WGeometry}.
- *
- * Each emitted WGeometry is created from the feature JSON text (so the geojson field of WGeometry
- * contains the feature with its geometry, type and properties).
+ * Java execution operator that parses a GeoJSON document and emits each feature as a {@link Record}.
+ * Each emitted Record is created from the feature JSON text. The Record consists of the geometry and properties
+ * of the feature (i.e., the Record's schema has two fields: "geometry" and "properties", where "geometry"
+ * is of type {@link WGeometry} and "properties" is of type {@linkplain Map<String, Object>}).
  */
 public class JavaGeoJsonFileSource extends GeoJsonFileSource implements JavaExecutionOperator {
 
@@ -40,13 +39,52 @@ public class JavaGeoJsonFileSource extends GeoJsonFileSource implements JavaExec
         super(that);
     }
 
-    public static Stream<JsonElement> readFeatureCollectionFromFile(final String path) {
+    public static Stream<Record> readFeatureCollectionFromFile(final String path) {
         try {
             final URI uri = URI.create(path);
-            final String content = Files.readString(Path.of(uri), StandardCharsets.UTF_8);
-            final JsonElement jsonElement = JsonParser.parseString(content);
-            final JsonArray features = jsonElement.getAsJsonObject().getAsJsonArray("features");
-            return StreamSupport.stream(features.spliterator(), false);
+
+            // use streaming parser to avoid loading entire file into memory
+            ObjectMapper objectMapper = new ObjectMapper();
+            com.fasterxml.jackson.core.JsonFactory jsonFactory = objectMapper.getFactory();
+            List<Record> records = new ArrayList<>();
+
+            try (java.io.InputStream in = Files.newInputStream(Paths.get(uri.getPath()));
+                 com.fasterxml.jackson.core.JsonParser parser = jsonFactory.createParser(in)) {
+
+                // advance to start object
+                if (parser.nextToken() != JsonToken.START_OBJECT) {
+                    throw new WayangException("Expected JSON object at root");
+                }
+
+                // find the "features" array
+                while (parser.nextToken() != null) {
+                    if (parser.currentToken() == JsonToken.FIELD_NAME
+                            && "features".equals(parser.getCurrentName())) {
+                        if (parser.nextToken() != JsonToken.START_ARRAY) {
+                            throw new WayangException("Expected 'features' to be an array");
+                        }
+                        // iterate features
+                        while (parser.nextToken() != JsonToken.END_ARRAY) {
+                            // parser is at START_OBJECT of a feature
+                            JsonNode featureNode = objectMapper.readTree(parser);
+                            JsonNode geometryNode = featureNode.path("geometry");
+                            JsonNode propertiesNode = featureNode.path("properties");
+
+                            String geometryJsonString = objectMapper.writeValueAsString(geometryNode);
+                            WGeometry wGeometry = WGeometry.fromGeoJson(geometryJsonString);
+
+                            Map<String, Object> propertiesMap = objectMapper.convertValue(propertiesNode, Map.class);
+
+                            Record record = new Record();
+                            record.addField(wGeometry);
+                            record.addField(propertiesMap);
+                            records.add(record);
+                        }
+                        break; // done reading features
+                    }
+                }
+            }
+            return records.stream();
         } catch (final Exception e) {
             throw new WayangException(e);
         }
@@ -62,8 +100,7 @@ public class JavaGeoJsonFileSource extends GeoJsonFileSource implements JavaExec
         assert outputs.length == this.getNumOutputs();
 
         final String path = this.getInputUrl();
-        final Stream<JsonElement> featureStream = readFeatureCollectionFromFile(path);
-        final Stream<WGeometry> wGeometryStream = featureStream.map(WGeometry::fromJsonInput);
+        final Stream<Record> wGeometryStream = readFeatureCollectionFromFile(path);
 
         ((StreamChannel.Instance) outputs[0]).accept(wGeometryStream);
 
